--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@romcal/calendar.canada": "^3.0.0-dev.32",
     "@types/react": "~18.0.27",
     "date-fns": "^2.29.3",
     "expo": "^48.0.4",
+    "expo-asset": "~8.9.1",
+    "expo-blur": "~12.2.2",
     "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
     "expo-router": "^1.2.0",
     "expo-screen-orientation": "~5.1.1",
     "expo-splash-screen": "~0.18.1",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.16.3",
     "i18next": "^22.4.11",
     "intl-pluralrules": "^1.3.1",
     "react": "18.2.0",
@@ -29,11 +35,9 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
+    "react-query": "^3.39.3",
     "romcal": "^3.0.0-dev.32",
-    "typescript": "^4.9.4",
-    "expo-sqlite": "~11.1.1",
-    "expo-file-system": "~15.2.2",
-    "expo-asset": "~8.9.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
