--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@romcal/calendar.canada": "^3.0.0-dev.32",
+    "@romcal/calendar.canada": "^3.0.0-dev.35",
+    "@romcal/calendar.united-states": "^3.0.0-dev.35",
+    "@tamagui/animations-react-native": "^1.8.1",
+    "@tamagui/babel-plugin": "^1.8.1",
+    "@tamagui/config": "^1.8.1",
+    "@tamagui/theme-base": "^1.8.1",
     "@types/react": "~18.0.27",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "date-fns": "^2.29.3",
     "expo": "^48.0.4",
     "expo-asset": "~8.9.1",
@@ -15,6 +21,7 @@
     "expo-constants": "~14.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
     "expo-router": "^1.2.0",
@@ -26,19 +33,22 @@
     "expo-updates": "~0.16.3",
     "i18next": "^22.4.11",
     "intl-pluralrules": "^1.3.1",
+    "lodash": "^4.17.21",
+    "moti": "^0.24.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
     "react-query": "^3.39.3",
-    "romcal": "^3.0.0-dev.32",
-    "typescript": "^4.9.4",
-    "react-native-pager-view": "6.1.2"
+    "romcal": "^3.0.0-dev.35",
+    "tamagui": "^1.8.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
